support for analog output

--- a/phidgets_api/CMakeLists.txt
+++ b/phidgets_api/CMakeLists.txt
@@ -19,6 +19,8 @@ include_directories(include)
 add_library(phidgets_api src/accelerometer.cpp
                          src/analog_input.cpp
                          src/analog_inputs.cpp
+                         src/analog_output.cpp
+                         src/analog_outputs.cpp
                          src/digital_input.cpp
                          src/digital_inputs.cpp
                          src/digital_output.cpp
